Enhance installation, admin setup, and Gemini service (#2)
* fix: simplify installation script, update GitHub repository references, and improve beta release tagging logic

* fix: update Gemini model reference and refine response handling logic

* fix: update installation script to include target directory navigation and improve download path handling